<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true" android:id="@+id/nestedScrollView">

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.RegisterActivity">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:id="@+id/nameLayout_register"
                android:layout_marginTop="16dp"
                app:helperTextTextAppearance="@style/TextAppearance.Design.Error"
                app:helperText=""
                app:layout_constraintTop_toTopOf="parent">

            <EditText
                    android:id="@+id/name_register_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text=""
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:id="@+id/emailLayout_register"
                android:layout_marginTop="16dp"
                app:helperTextTextAppearance="@style/TextAppearance.Design.Error"
                app:helperText=""
                app:layout_constraintTop_toBottomOf="@+id/nameLayout_register">

            <EditText
                    android:id="@+id/email_register_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text=""
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:helperTextTextAppearance="@style/TextAppearance.Design.Error"
                app:helperText=""
                android:id="@+id/passwordLayout_register"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/emailLayout_register">

            <EditText
                    android:id="@+id/password_register_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text=""
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:enabled="false"
                android:background="#0AAAA0"
                android:textSize="18sp"
                android:id="@+id/sign_up_button_register_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/passwordLayout_register"/>

        <ProgressBar

                android:elevation="8dp"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loading_progressbar_register_activity"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>