<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent" android:layout_width="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FAFAFA"
            tools:context=".activity.LoginActivity">


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:id="@+id/emailLayout"
                android:layout_marginTop="8dp"
                app:helperTextTextAppearance="@style/TextAppearance.Design.Error"
                app:helperText=""
                app:layout_constraintTop_toTopOf="parent">

            <EditText
                    android:id="@+id/email_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text=""
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:helperTextTextAppearance="@style/TextAppearance.Design.Error"
                app:helperText=""
                app:layout_constraintTop_toBottomOf="@+id/emailLayout"
                android:id="@+id/passwordLayout">

            <EditText
                    android:id="@+id/password_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text=""
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:enabled="false"
                android:background="#0AAAA0"
                android:textSize="18sp"
                android:id="@+id/sign_in_button_login_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordLayout"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5"
                android:id="@+id/linearLayout"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button_login_activity">
            <View android:background="@color/colorPrimaryDark"
                  android:layout_marginRight="4dp"
                  android:layout_width="0dp"
                  android:layout_height="1dp"
                  android:layout_weight="1" android:layout_marginEnd="4dp"/>
            <TextView
                    android:id="@+id/custom_signup_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/sign_up_message"/>
            <View android:background="@color/colorPrimaryDark"
                  android:layout_marginLeft="4dp"
                  android:layout_width="0dp"
                  android:layout_height="1dp"
                  android:layout_weight="1" android:layout_marginStart="4dp"/>
        </LinearLayout>

        <Button
                android:background="#0AAAA0"
                android:textSize="18sp"
                android:id="@+id/sign_up_button_login_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
        <ProgressBar

                android:elevation="8dp"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loading_progressbar_login_activity"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>